--- a/client/css/twitter.css
+++ b/client/css/twitter.css
@@ -1,3 +1,7 @@
+.body{
+
+}
+
 .twHandle{
     font-size: 12px;
     opacity: 0.5;
@@ -48,3 +52,17 @@ p *{
 .border{
     border: 1px solid #000000;
 }
+
+.grid-cols{
+    padding-left:3px ;
+    padding-right:3px ;
+}
+
+/*
+.row-fluid{
+    white-space: nowrap;
+}
+.row-fluid .col-md-4{
+    display: inline-block;
+}
+*/
